       with the neutron direction. In the case where the radius is 0, this
       generator has identical output to the "constant" generator. The advantage
       of this new generator is that it can be used to illuminate a spherical
       sample uniformly, and is for instance intended for investigation of
       extinction effects in diffraction with spherical grains.
     * Make the Python Histogram classes returned by the MiniMC framework much
       more feature complete, adding several features intended to make
       subsequent data analysis easier.
     * Split out and mature the results objects actually returned by the MiniMC
       framework in the Python API.
     * Fix several issues in the C++ templates used to implement the histograms
       used by the MiniMC framework. These issues all concerned features not
       actually used by the MiniMC in past releases (fixes github issue #300).
     * Minor bugfix in histogram objects returned by the MiniMC framework. The
       integrate(..) method of these objects now supports integration to include
       the last bin.
     * Add Binning class to histograms, for convenience and to reduce code
       duplication.
     * Add small unscientific but completely reproducible RNG for Python unit
       tests.
     * Add comprehensive (>99% coverage) unit test for python histograms.
     * NCRandUtils.hh: Add randPointInUnitCircle utility.
     * Add testing utilities for easy monitoring that MiniMC output for a
       particular cfg-string does not change in a statistically significant
       manner. This includes utilities for easy inspection and maintenance of
       the tests in case of detected discrepancies. Also add a few new tests
       using this new feature.
     * Add ChiSquared-CDF approximation functions, needed for histogram
       comparisons to yield approximate p-values without introducing a new
       dependency like scipy.